# task02--zoo-TamariIv

./: README.md
cpp_ex2/: CMakeLists.txt
cpp_ex2/include/: Animal.h  CMakeLists.txt  Lion.h  Location.h  Monkey.h  Owl.h  Zoo.h
cpp_ex2/src/: Animal.cpp  CMakeLists.txt  Lion.cpp  Monkey.cpp  Owl.cpp  Zoo.cpp  cpp_ex2.cpp
